--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,40 +1,49 @@
-# rebind prefix to space
-#
+# fix colors
+set -g default-terminal "screen-256color"
+
+# rebind prefix
+set -g prefix C-a
 unbind C-b
-set-option -g prefix C-a
-bind C-a send-prefix
+bind-key C-a send-prefix
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-#
-# # allows for mouse support
+# keybinds
+
+unbind %
+bind | split-window -h
+
+unbind '"'
+bind - split-window -v
+
+unbind r
+bind r source-file ~/.tmux.conf
+
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
+
+# turn on mouse control
 set -g mouse on
-#
-# # for quick notes
-# bind-key h split-window -h "vim ~/notes/notes.md"
-# preix + space to jump back to prev window
-bind Space last-window
-#
-#
-# # Smart pane switching with awareness of Vim splits.
-# # See: https://github.com/christoomey/vim-tmux-navigator
- is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
- bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
- bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
- bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
- bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
- tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
- if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
- if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
- bind-key -T copy-mode-vi 'C-h' select-pane -L
- bind-key -T copy-mode-vi 'C-j' select-pane -D
- bind-key -T copy-mode-vi 'C-k' select-pane -U
- bind-key -T copy-mode-vi 'C-l' select-pane -R
- bind-key -T copy-mode-vi 'C-\' select-pane -l
-#
+# configure vim copy mode
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging with mouse
+
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/nvim with Ctrl-hjkl
+set -g @plugin 'jimeh/tmux-themepack' # to configure tmux theme
+set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+
+set -g @themepack 'powerline/default/cyan' # use this theme for tmux
+
+set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
+set -g @continuum-restore 'on' # enable tmux-continuum functionality
+
+run '~/.tmux/plugins/tpm/tpm'
