--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -10,6 +10,8 @@ brew "fd"
 brew "ffmpeg"
 # Command-line fuzzy finder written in Go
 brew "fzf"
+# GitHub command-line tool
+brew "gh"
 # Distributed revision control system
 brew "git"
 # Git credential helper that authenticates in browser using OAuth
@@ -92,7 +94,9 @@ cask "visual-studio-code"
 cask "zen"
 vscode "catppuccin.catppuccin-vsc"
 vscode "catppuccin.catppuccin-vsc-icons"
+vscode "dbaeumer.vscode-eslint"
 vscode "docker.docker"
+vscode "esbenp.prettier-vscode"
 vscode "github.copilot"
 vscode "github.copilot-chat"
 vscode "ms-azuretools.vscode-docker"
@@ -108,4 +112,5 @@ vscode "ms-vscode.cpptools-extension-pack"
 vscode "ms-vscode.cpptools-themes"
 vscode "ms-vscode.remote-explorer"
 vscode "rust-lang.rust-analyzer"
+vscode "sigbots.pros"
 vscode "vscodevim.vim"
